--- a/mvc-core/.env.example
+++ b/mvc-core/.env.example
@@ -9,6 +9,6 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=mvc_framework
+DB_DATABASE=mvcpsr4
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
